# uccl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.rocm  MANIFEST.in  Makefile  README.md  async_example.cpp  build.sh  build_and_install.sh  build_inner.sh  build_insider_docker.sh  build_native.sh  compare_warmup.py  deepep_config.json  diff.patch  docker_build.sh  docker_build_and_install.sh  format.sh  graph-dump.xml  launch_sglang.sh  memory.md  plan.md  pyproject.toml  requirements.txt  rsync.py  setup.py  setup_nic.sh  shared.sh  test.md  test_nccl.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
afxdp/: Makefile  run_nccl_test.sh  timely.h  timing_wheel.h  transport.cc  transport.h  transport_config.h  util_afxdp.h  util_afxdp_test.cc
atomic_microbench/: Makefile  bench  bench.cpp
collective/: utran_osdi26ae.md
deep_ep/: __init__.py
dietgpu/: DietGpu.cpp  DietGpu_hip.cpp  ans_test.py  benchmark.py  float_test.py  setup.py  verify_sources.py
doc/: dev.md  dev_efa.md  dev_rdma.md
docker/: Dockerfile.cuda  Dockerfile.efa  (+3 more)
experimental/lite/ep/csrc/kernels/: CMakeLists.txt
experimental/lite/ep/csrc/kernels/backend/: CMakeLists.txt  api.cuh  nccl.cu  nvshmem.cu
experimental/lite/ep/csrc/kernels/elastic/: api.hpp  barrier.hpp  combine.hpp  dispatch.hpp  engram.hpp  pp_send_recv.hpp
experimental/lite/ep/csrc/kernels/legacy/: CMakeLists.txt  api.cuh  buffer.cuh  compiled.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  intranode.cu  launch.cuh  layout.cu  utils.cuh
(+2015 files in other folders)
